o adding profile to set testing params on different platforms. specifically taking care of setting the correct options so that tests work on OS X.